<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intelliguide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_my_localization">Użyj mojej lokalizacji</string>
    <string name="main_screen_header">Witaj, co chcesz dziś zwiedzić?</string>
    <string name="write_review">Napisz recenzję...</string>
    <string name="review_empty">Recenzja nie może być pusta</string>

    <string name="sign_in">Zaloguj</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="email_address">Adres email</string>
    <string name="password">Hasło</string>
    <string name="passwrod_repeat">Powtórz hasło</string>
    <string name="log_out">Wyloguj</string>
    <string name="my_places">Moje atrakcje</string>

</resources>
